--- a/products/lucky-fish.html
+++ b/products/lucky-fish.html
@@ -79,7 +79,7 @@
             <div class="product">
                 <img src="img/Koi-Lucky-Fish.png.webp" alt="">
                 <div class="info">
-
+                    <h1>Chuông thủy âm hình cá Mizu Bell</h1>
                 </div>
             </div>
         </div>
@@ -93,7 +93,7 @@
                 <p>Email: Baotgps30763@fpt.edu.vn</p>
                 <p>Điện thoại: 0976-xxx-xxx</p>
             </div>
-            <img src="img/payment.webp" alt="">
+            <img src="../img/payment.webp" alt="">
         </div>
     </footer>
 </body>
