--- a/products/lucky-fish.html
+++ b/products/lucky-fish.html
@@ -79,7 +79,29 @@
             <div class="product">
                 <img src="img/Koi-Lucky-Fish.png.webp" alt="">
                 <div class="info">
-                    <h1>Chuông thủy âm hình cá Mizu Bell</h1>
+                    <h1>Chuông thủy âm hình cá Mizu Bell từ Nhật Bản</h1>
+                    <div class="divider"></div>
+                    <h2>16.96$</h2>
+                    <p>Chuông cá koi thủy âm, phát ra âm thanh của nước trong và sâu lắng. Cùng dây đeo duyên dáng, bùa
+                        hộ mệnh này có tác dụng mang đến hạnh phúc cho bạn. Có thể làm móc khóa hoặc điện thoại, hàng
+                        thủ công từ Nhật.</p>
+                    <div class="cart">
+                        <form action="">
+                            <div class="quantity">
+                                <input value="-" type="button">
+                                <input value="1" inputmode="numeric" min="1" step="1" autocomplete="off" type="number">
+                                <input value="+" type="button">
+                            </div>
+                            <div>
+                                <button class="btn" type="submit">Add
+                                    to cart</button>
+                            </div>
+                        </form>
+                    </div>
+
+                    <p class="disclaimer">Do #Covid-19 nên quá trinh vận chuyển có thể chậm hơn dự tính. Nhưng các gói hàng nhất định sẽ
+                        được đưa đến cho bạn, mong bạn thông cảm.</p>
+
                 </div>
             </div>
         </div>
