--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Japanese-Omamori</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="asset/stylesheet/style.css">
 
     <script src="https://kit.fontawesome.com/9799b88c72.js" crossorigin="anonymous"></script>
 </head>
@@ -15,7 +15,7 @@
     <header>
         <div class="header-inner container flex-row">
             <div class="logo">
-                <img src="./img/logo.png" style="width: 166px;" alt="">
+                <img src="asset/img/logo.png" style="width: 166px;" alt="">
                 <p>Bùa May Mắn Nhật Bản</p>
             </div>
 
@@ -51,7 +51,7 @@
                     <li class="nav-item"><a href="#">CỬA HÀNG</a></li>
                     <li class="nav-item"><a href="#">BLOG</a></li>
                     <li class="nav-item"><a href="#">CHÍNH SÁCH</a></li>
-                    <li class="nav-item"><a href="#">LIÊN HỆ</a></li>
+                    <li class="nav-item"><a href="sub-pages/contact.html">LIÊN HỆ</a></li>
                     <li class="nav-item"><a href="#">FAQ</a></li>
                     <li class="nav-item"><a href="#">VỀ CHÚNG TÔI</a></li>
                 </ul>
@@ -93,7 +93,7 @@
                 <div class="row">
                     <a href="#">
                         <div class="row-item category">
-                            <img src="img/category/category-1.webp" alt="">
+                            <img src="asset/img/category/category-1.webp" alt="">
                             <div>
                                 <h5>Bùa ý nguyện</h5>
                                 <p>238 sản phẩm</p>
@@ -102,7 +102,7 @@
                     </a>
                     <a href="#">
                         <div class="row-item category">
-                            <img src="img/category/category-2.webp" alt="">
+                            <img src="asset/img/category/category-2.webp" alt="">
                             <div>
                                 <h5>Biểu tượng hộ mệnh</h5>
                                 <p>240 sản phẩm</p>
@@ -111,7 +111,7 @@
                     </a>
                     <a href="#">
                         <div class="row-item category">
-                            <img src="img/category/category-3.webp" alt="">
+                            <img src="asset/img/category/category-3.webp" alt="">
                             <div>
                                 <h5>Bùa đền thờ</h5>
                                 <p>129 sản phẩm</p>
@@ -120,7 +120,7 @@
                     </a>
                     <a href="#">
                         <div class="row-item category">
-                            <img src="img/category/category-4.webp" alt="">
+                            <img src="asset/img/category/category-4.webp" alt="">
                             <div>
                                 <h5>Nhật bản</h5>
                                 <p>84 sản phẩm</p>
@@ -136,9 +136,9 @@
                     <b></b>
                 </h3>
                 <div class="row">
-                    <a href="products/lucky-fish.html">
+                    <a href="sub-pages/lucky-fish.html">
                         <div class="row-item">
-                            <img src="img/best-selling/bs1.png" alt="">
+                            <img src="asset/img/best-selling/bs1.png" alt="">
                             <div class="brief">
                                 <div class="type">
                                     <p>MAY MẮN VÀ HẠNH PHÚC</p>
@@ -157,7 +157,7 @@
                     </a>
                     <a href="#">
                         <div class="row-item">
-                            <img src="img/best-selling/bs2.webp" alt="">
+                            <img src="asset/img/best-selling/bs2.webp" alt="">
                             <div class="brief">
                                 <div class="type">
                                     <p>MAY MẮN VÀ HẠNH PHÚC</p>
@@ -176,7 +176,7 @@
                     </a>
                     <a href="#">
                         <div class="row-item">
-                            <img src="img/best-selling/bs3.webp" alt="">
+                            <img src="asset/img/best-selling/bs3.webp" alt="">
                             <div class="brief">
                                 <div class="type">
                                     <p>7 VỊ THẦN</p>
@@ -195,7 +195,7 @@
                     </a>
                     <a href="#">
                         <div class="row-item">
-                            <img src="img/best-selling/bs4.webp" alt="">
+                            <img src="asset/img/best-selling/bs4.webp" alt="">
                             <div class="brief">
                                 <div class="type">
                                     <p>5 YÊN & ĐỒNG TIỀN MAY MẮN</p>
@@ -225,9 +225,15 @@
                 <p>Email: Baotgps30763@fpt.edu.vn</p>
                 <p>Điện thoại: 0976-xxx-xxx</p>
             </div>
-            <img src="img/payment.webp" alt="">
+            <img src="asset/img/payment.webp" alt="">
         </div>
     </footer>
+
+    <audio autoplay style="display: none;">
+        <source src="asset/tofie.mp3" type="audio/mpeg">
+    </audio>
+    
+    <script src="https://uhchat.net/code.php?f=f006aa"></script>
 </body>
 
 </html>
