--- a/sub-pages/contact.html
+++ b/sub-pages/contact.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Japanese-Omamori</title>
-    <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="product.css">
+    <title>Liên hệ</title>
+    <link rel="stylesheet" href="../asset/stylesheet/style.css">
+    <link rel="stylesheet" href="../asset/stylesheet/contact.css">
+
     <script src="https://kit.fontawesome.com/9799b88c72.js" crossorigin="anonymous"></script>
 </head>
 
@@ -15,7 +16,7 @@
     <header>
         <div class="header-inner container flex-row">
             <div class="logo">
-                <img src="../img/logo.png" style="width: 166px;" alt="">
+                <img src="../asset/img/logo.png" style="width: 166px;" alt="">
                 <p>Bùa May Mắn Nhật Bản</p>
             </div>
 
@@ -47,11 +48,11 @@
         <nav>
             <div class="container flex-row">
                 <ul class="nav-bar">
-                    <li class="nav-item in-use"><a href="#">TRANG CHỦ</a></li>
+                    <li class="nav-item in-use"><a href="../index.html">TRANG CHỦ</a></li>
                     <li class="nav-item"><a href="#">CỬA HÀNG</a></li>
                     <li class="nav-item"><a href="#">BLOG</a></li>
                     <li class="nav-item"><a href="#">CHÍNH SÁCH</a></li>
-                    <li class="nav-item"><a href="#">LIÊN HỆ</a></li>
+                    <li class="nav-item"><a href="../sub-pages/contact.html">LIÊN HỆ</a></li>
                     <li class="nav-item"><a href="#">FAQ</a></li>
                     <li class="nav-item"><a href="#">VỀ CHÚNG TÔI</a></li>
                 </ul>
@@ -75,34 +76,20 @@
     </header>
 
     <main>
-        <div class="wrapper">
-            <div class="product">
-                <img src="img/Koi-Lucky-Fish.png.webp" alt="">
-                <div class="info">
-                    <h1>Chuông thủy âm hình cá Mizu Bell từ Nhật Bản</h1>
-                    <div class="divider"></div>
-                    <h2>16.96$</h2>
-                    <p>Chuông cá koi thủy âm, phát ra âm thanh của nước trong và sâu lắng. Cùng dây đeo duyên dáng, bùa
-                        hộ mệnh này có tác dụng mang đến hạnh phúc cho bạn. Có thể làm móc khóa hoặc điện thoại, hàng
-                        thủ công từ Nhật.</p>
-                    <div class="cart">
-                        <form action="">
-                            <div class="quantity">
-                                <input value="-" type="button">
-                                <input value="1" inputmode="numeric" min="1" step="1" autocomplete="off" type="number">
-                                <input value="+" type="button">
-                            </div>
-                            <div>
-                                <button class="btn" type="submit">Add
-                                    to cart</button>
-                            </div>
-                        </form>
-                    </div>
-
-                    <p class="disclaimer">Do #Covid-19 nên quá trinh vận chuyển có thể chậm hơn dự tính. Nhưng các gói hàng nhất định sẽ
-                        được đưa đến cho bạn, mong bạn thông cảm.</p>
-
-                </div>
+        <div class="contact">
+            <div class="contact-info">
+                <h3>JAPANESE-OMANORI.COM</h3>
+                <span>61/79 Petchakasem Soi75 Petchakasem Road <br>
+                    Nongkangplu, Nongkam <br>
+                    Bangkok, 10160 THAILAND. <br> <br>
+                    Email to us we will reply you quickly.
+                <h5>chantip@siamkane.com</h5></span>
+            </div>
+            <div class="contact-map">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3876.2304228601306!2d100.33045542492995!3d13.704489559602187!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e295f117bce3cb%3A0xc3f1b98dbdccf859!2s79%20Petchkasem%20Rd%2C%20Khwaeng%20Nong%20Khang%20Phlu%2C%20Nong%20Khaem%2C%20Krung%20Thep%20Maha%20Nakhon%2010160%2C%20Thailand!5e0!3m2!1sen!2s!4v1676948893198!5m2!1sen!2s"
+                    width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
     </main>
@@ -115,9 +102,15 @@
                 <p>Email: Baotgps30763@fpt.edu.vn</p>
                 <p>Điện thoại: 0976-xxx-xxx</p>
             </div>
-            <img src="../img/payment.webp" alt="">
+            <img src="../asset/img/payment.webp" alt="">
         </div>
     </footer>
+
+    <audio autoplay style="display: none;">
+        <source src="../asset/tofie.mp3" type="audio/mpeg">
+    </audio>
+
+    <script src="https://uhchat.net/code.php?f=f006aa"></script>
 </body>
 
 </html>
