--- a/sub-pages/contact.html
+++ b/sub-pages/contact.html
@@ -82,7 +82,7 @@
                 <span>61/79 Petchakasem Soi75 Petchakasem Road <br>
                     Nongkangplu, Nongkam <br>
                     Bangkok, 10160 THAILAND. <br> <br>
-                    Email to us we will reply you quickly.
+                    Chúng tôi sẽ cố gắng trả lời email của bạn nhanh nhất có thể.
                 <h5>chantip@siamkane.com</h5></span>
             </div>
             <div class="contact-map">
