--- a/sub-pages/lucky-fish.html
+++ b/sub-pages/lucky-fish.html
@@ -91,8 +91,7 @@
                                 <input value="+" type="button">
                             </div>
                             <div>
-                                <button class="btn" type="submit">Add
-                                    to cart</button>
+                                <button class="btn" type="submit">Thêm vào giỏ</button>
                             </div>
                         </form>
                     </div>
