--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Japanese-Omamori</title>
-    <link rel="stylesheet" href="asset/stylesheet/style.css">
+    <link rel="stylesheet" href="asset/stylesheet/general.css">
+    <link rel="stylesheet" href="asset/stylesheet/home.css">
 
     <script src="https://kit.fontawesome.com/9799b88c72.js" crossorigin="anonymous"></script>
 </head>
@@ -47,13 +48,13 @@
         <nav>
             <div class="container flex-row">
                 <ul class="nav-bar">
-                    <li class="nav-item in-use"><a href="#">TRANG CHỦ</a></li>
-                    <li class="nav-item"><a href="#">CỬA HÀNG</a></li>
-                    <li class="nav-item"><a href="#">BLOG</a></li>
-                    <li class="nav-item"><a href="#">CHÍNH SÁCH</a></li>
-                    <li class="nav-item"><a href="sub-pages/contact.html">LIÊN HỆ</a></li>
-                    <li class="nav-item"><a href="#">FAQ</a></li>
-                    <li class="nav-item"><a href="#">VỀ CHÚNG TÔI</a></li>
+                    <li class="nav-item in-use" id="goto-home">TRANG CHỦ</li>
+                    <li class="nav-item" id="goto-shop">CỬA HÀNG</li>
+                    <li class="nav-item" id="goto-blog">BLOG</li>
+                    <li class="nav-item" id="goto-policy">CHÍNH SÁCH</li>
+                    <li class="nav-item" id="goto-contact">LIÊN HỆ</li>
+                    <li class="nav-item" id="goto-faq">FAQ</li>
+                    <li class="nav-item" id="goto-aboutus"></li>
                 </ul>
                 <div class="social">
                     <ul class="nav-bar">
@@ -75,147 +76,6 @@
     </header>
 
     <main>
-        <div class="banner">
-            <div>
-                <h1>Cùng mua bùa hộ mệnh Nhật Bản, chỉ từ <p>200.000 vnd</p>
-                </h1>
-                <button><a href="#">MUA NGAY</a></button>
-            </div>
-        </div>
-
-        <div class="content">
-            <div class="section">
-                <h3 class="sec-title">
-                    <b></b>
-                    <p>DANH MỤC BÙA HỘ MỆNH</p>
-                    <b></b>
-                </h3>
-                <div class="row">
-                    <a href="#">
-                        <div class="row-item category">
-                            <img src="asset/img/category/category-1.webp" alt="">
-                            <div>
-                                <h5>Bùa ý nguyện</h5>
-                                <p>238 sản phẩm</p>
-                            </div>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="row-item category">
-                            <img src="asset/img/category/category-2.webp" alt="">
-                            <div>
-                                <h5>Biểu tượng hộ mệnh</h5>
-                                <p>240 sản phẩm</p>
-                            </div>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="row-item category">
-                            <img src="asset/img/category/category-3.webp" alt="">
-                            <div>
-                                <h5>Bùa đền thờ</h5>
-                                <p>129 sản phẩm</p>
-                            </div>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="row-item category">
-                            <img src="asset/img/category/category-4.webp" alt="">
-                            <div>
-                                <h5>Nhật bản</h5>
-                                <p>84 sản phẩm</p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="section best-selling">
-                <h3 class="sec-title">
-                    <b></b>
-                    <p>BÁN CHẠY NHẤT</p>
-                    <b></b>
-                </h3>
-                <div class="row">
-                    <a href="sub-pages/lucky-fish.html">
-                        <div class="row-item">
-                            <img src="asset/img/best-selling/bs1.png" alt="">
-                            <div class="brief">
-                                <div class="type">
-                                    <p>MAY MẮN VÀ HẠNH PHÚC</p>
-                                </div>
-                                <div class="name">
-                                    <p>Chuông thủy âm hình cá Mizu Bell</p>
-                                </div>
-                                <div class="price">
-                                    <p>16.96$</p>
-                                </div>
-                                <div class="cart">
-                                    <a href="#">THÊM VÀO GIỎ</a>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="row-item">
-                            <img src="asset/img/best-selling/bs2.webp" alt="">
-                            <div class="brief">
-                                <div class="type">
-                                    <p>MAY MẮN VÀ HẠNH PHÚC</p>
-                                </div>
-                                <div class="name">
-                                    <p>Bùa hộ mệnh chuông nhạc, thủy âm dễ thương</p>
-                                </div>
-                                <div class="price">
-                                    <p>16.96$</p>
-                                </div>
-                                <div class="cart">
-                                    <a href="#">THÊM VÀO GIỎ</a>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="row-item">
-                            <img src="asset/img/best-selling/bs3.webp" alt="">
-                            <div class="brief">
-                                <div class="type">
-                                    <p>7 VỊ THẦN</p>
-                                </div>
-                                <div class="name">
-                                    <p>Cái vồ may mắn từ đền Narita với bùa cỡ nhỏ bên trong</p>
-                                </div>
-                                <div class="price">
-                                    <p>16.96$</p>
-                                </div>
-                                <div class="cart">
-                                    <a href="#">THÊM VÀO GIỎ</a>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="row-item">
-                            <img src="asset/img/best-selling/bs4.webp" alt="">
-                            <div class="brief">
-                                <div class="type">
-                                    <p>5 YÊN & ĐỒNG TIỀN MAY MẮN</p>
-                                </div>
-                                <div class="name">
-                                    <p>Đồng 5 yên may mắn và sức khỏe</p>
-                                </div>
-                                <div class="price">
-                                    <p>4.96$</p>
-                                </div>
-                                <div class="cart">
-                                    <a href="#">THÊM VÀO GIỎ</a>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-
-        </div>
     </main>
     <footer>
         <div class="footer">
@@ -235,5 +95,7 @@
     
     <script src="https://uhchat.net/code.php?f=f006aa"></script>
 </body>
+
+<script src="script/main.js"></script>
 
 </html>
