--- a/sub-pages/home-main.html
+++ b/sub-pages/home-main.html
@@ -60,7 +60,7 @@
                     <b></b>
                 </h3>
                 <div class="row">
-                    <a href="sub-pages/lucky-fish.html">
+                    <a  id="goto-lucky_fish">
                         <div class="row-item">
                             <img src="asset/img/best-selling/bs1.png" alt="">
                             <div class="brief">
