--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
         <nav>
             <div class="container flex-row">
                 <ul class="nav-bar">
-                    <li class="nav-item in-use" id="goto-home">TRANG CHỦ</li>
-                    <li class="nav-item" id="goto-shop">CỬA HÀNG</li>
-                    <li class="nav-item" id="goto-blog">BLOG</li>
-                    <li class="nav-item" id="goto-policy">CHÍNH SÁCH</li>
-                    <li class="nav-item" id="goto-contact">LIÊN HỆ</li>
-                    <li class="nav-item" id="goto-faq">FAQ</li>
-                    <li class="nav-item" id="goto-aboutus"></li>
+                    <li class="nav-item in-use goto-home">TRANG CHỦ</li>
+                    <li class="nav-item goto-shop">CỬA HÀNG</li>
+                    <li class="nav-item goto-blog">BLOG</li>
+                    <li class="nav-item goto-policy">CHÍNH SÁCH</li>
+                    <li class="nav-item goto-contact">LIÊN HỆ</li>
+                    <li class="nav-item goto-faq">FAQ</li>
+                    <li class="nav-item goto-aboutus"></li>
                 </ul>
                 <div class="social">
                     <ul class="nav-bar">
