--- a/sub-pages/home-main.html
+++ b/sub-pages/home-main.html
@@ -60,14 +60,13 @@
                     <b></b>
                 </h3>
                 <div class="row">
-                    <a  id="goto-lucky_fish">
                         <div class="row-item">
-                            <img src="asset/img/best-selling/bs1.png" alt="">
+                            <img src="asset/img/best-selling/bs1.png" class="goto-lucky_fish" onclick="changePage('lucky_fish')" alt="">
                             <div class="brief">
                                 <div class="type">
                                     <p>MAY MẮN VÀ HẠNH PHÚC</p>
                                 </div>
-                                <div class="name">
+                                <div class="name" class="goto-lucky_fish" onclick="changePage('lucky_fish')">
                                     <p>Chuông thủy âm hình cá Mizu Bell</p>
                                 </div>
                                 <div class="price">
@@ -78,7 +77,6 @@
                                 </div>
                             </div>
                         </div>
-                    </a>
                     <a href="#">
                         <div class="row-item">
                             <img src="asset/img/best-selling/bs2.webp" alt="">
