--- a/testing.html
+++ b/testing.html
@@ -1,3 +1,81 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Japanese-Omamori</title>
+    <link rel="stylesheet" href="asset/stylesheet/general.css">
+    <link rel="stylesheet" href="asset/stylesheet/product.css">
+
+    <script src="https://kit.fontawesome.com/9799b88c72.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <header>
+        <div class="header-inner container flex-row">
+            <div class="logo">
+                <img src="asset/img/logo.png" style="width: 166px;" alt="">
+                <p>Bùa May Mắn Nhật Bản</p>
+            </div>
+
+            <div class="search-box">
+                <input type="search" placeholder="Search...">
+                <button>
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </button>
+            </div>
+
+            <div class="stuffs">
+                <ul class="flex-row">
+                    <li class="login-btn">
+                        <div>
+                            <a href="">
+                                <span>Đăng nhập</span>
+                            </a>
+                        </div>
+                    </li>
+                    <li class="header-divider"></li>
+                    <li class="header-cart">
+                        <a href="">
+                            <i class="fa-solid fa-cart-shopping"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <nav>
+            <div class="container flex-row">
+                <ul class="nav-bar">
+                    <li class="nav-item in-use goto-home">TRANG CHỦ</li>
+                    <li class="nav-item goto-shop">CỬA HÀNG</li>
+                    <li class="nav-item goto-blog">BLOG</li>
+                    <li class="nav-item goto-policy">CHÍNH SÁCH</li>
+                    <li class="nav-item goto-contact">LIÊN HỆ</li>
+                    <li class="nav-item goto-faq">FAQ</li>
+                    <li class="nav-item goto-aboutus"></li>
+                </ul>
+                <div class="social">
+                    <ul class="nav-bar">
+                        <li>
+                            <a href="">
+                                <i class="fa-brands fa-facebook"></i>
+                            </a>
+                            <a href="">
+                                <i class="fa-brands fa-instagram"></i>
+                            </a>
+                            <a href="">
+                                <i class="fa-brands fa-twitter"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+
     <main>
         <div class="wrapper">
             <div class="product">   
@@ -105,3 +183,27 @@
 
         <script src="script/product.js"></script>
     </main>
+
+
+    <footer>
+        <div class="footer">
+            <div>
+                <p>Được thực hiên bởi Trần Gia Bảo</p>
+                <p>Bản quyền 2023</p>
+                <p>Email: Baotgps30763@fpt.edu.vn</p>
+                <p>Điện thoại: 0976-xxx-xxx</p>
+            </div>
+            <img src="asset/img/payment.webp" alt="">
+        </div>
+    </footer>
+
+    <audio autoplay style="display: none;">
+        <source src="asset/tofie.mp3" type="audio/mpeg">
+    </audio>
+
+    <script src="https://uhchat.net/code.php?f=f006aa"></script>
+</body>
+
+<script src="script/main.js"></script>
+
+</html>
