--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Japanese-Omamori</title>
     <link rel="stylesheet" href="asset/stylesheet/general.css">
     <link rel="stylesheet" href="asset/stylesheet/home.css">
+    <link rel="stylesheet" href="asset/stylesheet/cart.css">
 
     <script src="https://kit.fontawesome.com/9799b88c72.js" crossorigin="anonymous"></script>
 </head>
@@ -38,9 +39,7 @@
                     </li>
                     <li class="header-divider"></li>
                     <li class="header-cart">
-                        <a href="">
                             <i class="fa-solid fa-cart-shopping"></i>
-                        </a>
                     </li>
                 </ul>
             </div>
@@ -93,9 +92,19 @@
         <source src="asset/tofie.mp3" type="audio/mpeg">
     </audio>
     
-    <script src="https://uhchat.net/code.php?f=f006aa"></script>
+    <div class="cart-container hidden">
+        <div class="cart-close">
+            <i class="fa-sharp fa-solid fa-xmark"></i>
+        </div>
+        <div class="cart-items">
+            <h3>Giỏ hàng của bạn</h3>
+        </div>  
+    </div>
+
 </body>
 
+<script src="https://uhchat.net/code.php?f=f006aa"></script>
 <script src="script/main.js"></script>
+<script src="script/cart.js"></script>
 
 </html>
