--- a/index.html
+++ b/index.html
@@ -93,11 +93,24 @@
     </audio>
     
     <div class="cart-container hidden">
-        <div class="cart-close">
-            <i class="fa-sharp fa-solid fa-xmark"></i>
+        <div class="cart-header">
+            <div class="close">
+                <i class="fa-sharp fa-solid fa-xmark"></i>
+            </div>
+            <div class="title">
+                <h3>YOUR CART</h3>
+            </div>
         </div>
         <div class="cart-items">
-            <h3>Giỏ hàng của bạn</h3>
+                <ul>
+                    <li>
+                        <div class="cart-item">
+                            <div class="thumbnail">
+                                <img src="asset/img/product/Koi-Lucky-Fish-1.png" alt="">
+                            </div>
+                        </div>
+                    </li>
+                </ul>
         </div>  
     </div>
 
