--- a/sub-pages/home-main.html
+++ b/sub-pages/home-main.html
@@ -66,7 +66,7 @@
                                 <div class="type">
                                     <p>MAY MẮN VÀ HẠNH PHÚC</p>
                                 </div>
-                                <div class="name" class="goto-lucky_fish" onclick="changePage('lucky_fish')">
+                                <div class="name" class="goto-lucky_fish" onclick="changePage('lucky_fish');prepareProductPage()">
                                     <p>Chuông thủy âm hình cá Mizu Bell</p>
                                 </div>
                                 <div class="price">
