--- a/sub-pages/lucky_fish-main.html
+++ b/sub-pages/lucky_fish-main.html
@@ -2,34 +2,34 @@
         <div class="wrapper">
             <div class="product">   
                 <div class="img">
-                    <img src="../asset/img/product/Koi-Lucky-Fish.png.webp" alt="">
+                    <img class="product-image" src="../asset/img/product/koi_lucky_fish/1.webp" alt="">
                     <div class="img-option">
                         <div class="img-option-item img-option-displaying">
-                            <img src="asset/img/product/Koi-Lucky-Fish.png.webp" alt="">
+                            <img src="asset/img/product/koi_lucky_fish/1.webp" alt="">
                         </div>
                         <div class="img-option-item">
-                            <img src="asset/img/product/Koi-Lucky-Fish-1.png" alt="">
+                            <img src="asset/img/product/koi_lucky_fish/2.png" alt="">
                         </div>
                         <div class="img-option-item">
-                            <img src="asset/img/product/Koi-Lucky-Fish-2.jpg" alt="">
+                            <img src="asset/img/product/koi_lucky_fish/3.jpg" alt="">
                         </div>
                     </div>
 
                 </div>
                 <div class="info">
-                    <h1>Chuông thủy âm hình cá Mizu Bell từ Nhật Bản</h1>
+                    <h1 class="product-name">Chuông thủy âm hình cá Mizu Bell từ Nhật Bản</h1>
                     <div class="divider"></div>
-                    <h2>16.96$</h2>
+                    <h2 class="product-price">16.96$</h2>
                     <p>Chuông cá koi thủy âm, phát ra âm thanh của nước trong và sâu lắng. </p>
-                    <div class="cart">
+                    <div class="cart-option">
                         <form action="">
                             <div class="quantity">
                                 <input value="-" type="button">
-                                <input value="1" inputmode="numeric" min="1" step="1" autocomplete="off" type="number">
+                                <input value="1" class="product-quantity" inputmode="numeric" min="1" step="1" autocomplete="off" type="number">
                                 <input value="+" type="button">
                             </div>
                             <div>
-                                <button class="btn" type="submit">Thêm vào giỏ</button>
+                                <button class="btn" type="button" onclick="addToCart()">Thêm vào giỏ</button>
                             </div>
                         </form>
                     </div>
