--- a/index.html
+++ b/index.html
@@ -101,16 +101,13 @@
                 <h3>YOUR CART</h3>
             </div>
         </div>
-        <div class="cart-items">
+        <div class="cart-content">
                 <ul>
-                    <li>
-                        <div class="cart-item">
-                            <div class="thumbnail">
-                                <img src="asset/img/product/Koi-Lucky-Fish-1.png" alt="">
-                            </div>
-                        </div>
-                    </li>
+                    
                 </ul>
+                <div class="footer">   
+                    
+                </div>
         </div>  
     </div>
 
