--- a/sub-pages/overlay/login-main.html
+++ b/sub-pages/overlay/login-main.html
@@ -1,128 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./img/FPT_logo_2010.ico" type="image/x-icon">
-    <title>Đăng ký</title>
-
-    <script src="https://kit.fontawesome.com/9799b88c72.js" crossorigin="anonymous"></script>
-
-
-    <style>
-
-        .form {
-            background-color: white;
-            width: 25%;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            border-radius: 21px;
-        }
-
-        form {
-            padding: 27px 36px;
-            display: flex;
-            flex-flow: column;
-            align-items: flex-start;
-        }
-
-        h3 {
-            margin-bottom: 24px;
-            font-size: 21px;
-            letter-spacing: 1px;
-        }
-
-        input {
-            padding: 8px 12px;
-            width: 100%;
-            border: 1px groove #ccc;
-            border-radius: 6px;
-            font-size: small;
-            height: 42px;
-        }
-
-        input[type="submit"] {
-            background-color: rgb(253, 129, 84);
-            border-radius: 14px;
-            color: white;
-            margin-top: 5px;
-            cursor: pointer;
-        }
-
-        .bottom {
-            margin-top: 25px;
-            width: 100%;
-        }
-
-        .field {
-            margin: 12px 0;
-            width: 100%;
-        }
-
-        .field>p {
-            color: #414141;
-            margin-bottom: 3px;
-            font-size: 16px;
-        }
-
-        .bottom {
-            text-align: right;
-        }
-
-        .bottom p,
-        .bottom a {
-            color: rgb(116, 116, 116);
-            font-size: 14px;
-        }
-
-        .back {
-            position: absolute;
-            background-color: white;
-            border-radius: 15px;
-            top: 5%;
-            left: 5%;
-        }
-
-        .back a {
-            padding: 0 24px;
-            line-height: 42px;
-        }
-
-        .back i,
-        .back a {
-            color: black;
-            text-decoration: none;
-        }
-    </style>
-</head>
-
-<body>
-    <div>
-        <div class="back"><a href="index.html"><i class="fa-solid fa-square-caret-left"></i> Trang chủ</a></div>
-        <form class="form">
-            <h3>ĐĂNG KÝ</h3>
+<div class="login">
+    <div onclick="hideOverlay()" class="back"><a><i class="fa-solid fa-square-caret-left"></i> Trang chủ</a></div>
+    <div class="form">
+        <form action="">
+            <h3>ĐĂNG NHẬP</h3>
             <div class="field">
                 <p>Tên đăng nhập</p>
-                <input type="text" placeholder="VD: TranGiaBao">
+                <input type="text">
             </div>
             <div class="field">
                 <p>Mật khẩu</p>
-                <input type="text" placeholder="VD: abc12345">
-            </div>
-            <div class="field">
-                <p>Xác nhận mật khẩu</p>
                 <input type="text">
+                <a href="#" style="font-size: 14px;margin-top: 3px;color: rgb(116, 116, 116);text-decoration: none;">Quên mật khẩu?</a>
             </div>
             <div class="bottom">
-                <p>Bạn đã có tài khoản? <a href="./dangnhap.html">Đăng nhập</a></p>
+                <p>Bạn chưa có tài khoản? <a onclick="overlayLoader('sub-pages/overlay/sign_up-main.html')" style="cursor: pointer;">Đăng ký</a></p>
                 <input type="submit" value="XÁC NHẬN">
             </div>
         </form>
     </div>
-</body>
-
-</html>
+</div>
