--- a/sub-pages/lucky_fish-main.html
+++ b/sub-pages/lucky_fish-main.html
@@ -24,9 +24,9 @@
                     <div class="cart-option">
                         <form action="">
                             <div class="quantity">
-                                <input value="-" type="button">
+                                <input value="-" step="1" type="button" onclick="quantityEditor(this)">
                                 <input value="1" class="product-quantity" inputmode="numeric" min="1" step="1" autocomplete="off" type="number">
-                                <input value="+" type="button">
+                                <input value="+" step="1" type="button" onclick="quantityEditor(this)">
                             </div>
                             <div>
                                 <button class="btn" type="button" onclick="addToCart()">Thêm vào giỏ</button>
