--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <source src="asset/tofie.mp3" type="audio/mpeg">
     </audio>
     
-    <div class="cart-container hidden">
+    <div class="cart-container hide-cart">
         <div class="cart-header">
             <div class="close">
                 <i class="fa-sharp fa-solid fa-xmark"></i>
