--- a/sub-pages/home-main.html
+++ b/sub-pages/home-main.html
@@ -1,66 +1,140 @@
 <main>
-        <div class="banner">
-            <div>
-                <h1>Cùng mua bùa hộ mệnh Nhật Bản, chỉ từ <p>200.000 vnd</p>
-                </h1>
-                <button><a href="#">MUA NGAY</a></button>
-            </div>
-        </div>
+    <div class="banner">
+        <style>
+            .banner>div {
+                background-color: rgba(0, 0, 0, .4);
+                height: 100%;
+                width: 100%;
+                position: relative;
 
-        <div class="content">
-            <div class="section">
-                <h3 class="sec-title">
-                    <b></b>
-                    <p>DANH MỤC BÙA HỘ MỆNH</p>
-                    <b></b>
-                </h3>
-                <div class="row">
-                    <a href="#">
-                        <div class="row-item category">
-                            <img src="asset/img/category/category-1.webp" alt="">
-                            <div>
-                                <h5>Bùa ý nguyện</h5>
-                                <p>238 sản phẩm</p>
-                            </div>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="row-item category">
-                            <img src="asset/img/category/category-2.webp" alt="">
-                            <div>
-                                <h5>Biểu tượng hộ mệnh</h5>
-                                <p>240 sản phẩm</p>
-                            </div>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="row-item category">
-                            <img src="asset/img/category/category-3.webp" alt="">
-                            <div>
-                                <h5>Bùa đền thờ</h5>
-                                <p>129 sản phẩm</p>
-                            </div>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="row-item category">
-                            <img src="asset/img/category/category-4.webp" alt="">
-                            <div>
-                                <h5>Nhật bản</h5>
-                                <p>84 sản phẩm</p>
-                            </div>
-                        </div>
-                    </a>
+            }
+
+            .banner>div>div {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                max-width: 470px;
+            }
+
+            .banner * {
+                font-weight: bold;
+            }
+
+            .banner-title * {
+                margin: 9px 0;
+                color: white;
+                font-family: 'Anuphan', sans-serif;
+            }
+
+            .banner-title p {
+                font-family: 'Pacifico', cursive;
+                font-size: 21px;
+            }
+
+            .banner-title h1 {
+                font-size: 42px;
+            }
+
+
+            .banner-buttons {
+                display: flex;
+                gap: 12px;
+                margin-top: 42px;
+                flex-wrap: wrap;
+            }
+
+            .banner-buttons button {
+                border: none;
+                padding: 12px;
+                color: white;
+                font-weight: bold;
+                flex: 1;
+                flex-basis: 224px;
+                max-width: 270px;
+                margin: 0 auto;
+                cursor: pointer;
+            }
+
+            .banner-buttons button:first-child {
+                background-color: #11519B;
+            }
+            .banner-buttons button:nth-child(2) {
+                background-color: #B20000;
+            }
+            .banner-buttons button:last-child {
+                background-color: #007784;
+            }
+        </style>
+        <div>
+            <div>
+                <div class="banner-title">
+                    <p>Rất dễ dàng...</p>
+                    <h1>TÌM SẢN PHẨM TỪ DANH MỤC BÙA HỘ MỆNH CỦA CHÚNG TÔI</h1>
+                </div>
+                <div class="banner-buttons">
+                    <button>Ý NGHĨA BÙA HỘ MỆNH</button>
+                    <button>BÙA TỪ ĐỀN</button>
+                    <button>BIỂU TƯỢNG MAY MẮN</button>
                 </div>
             </div>
-            <div class="section best-selling">
-                <h3 class="sec-title">
-                    <b></b>
-                    <p>BÁN CHẠY NHẤT</p>
-                    <b></b>
-                </h3>
-                
+        </div>
+    </div>
+
+    <div class="content">
+        <div class="section">
+            <h3 class="sec-title">
+                <b></b>
+                <p>DANH MỤC BÙA HỘ MỆNH</p>
+                <b></b>
+            </h3>
+            <div class="row">
+                <a href="#">
+                    <div class="row-item category">
+                        <img src="asset/img/category/category-1.webp" alt="">
+                        <div>
+                            <h5>Bùa ý nguyện</h5>
+                            <p>238 sản phẩm</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="row-item category">
+                        <img src="asset/img/category/category-2.webp" alt="">
+                        <div>
+                            <h5>Biểu tượng hộ mệnh</h5>
+                            <p>240 sản phẩm</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="row-item category">
+                        <img src="asset/img/category/category-3.webp" alt="">
+                        <div>
+                            <h5>Bùa đền thờ</h5>
+                            <p>129 sản phẩm</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="row-item category">
+                        <img src="asset/img/category/category-4.webp" alt="">
+                        <div>
+                            <h5>Nhật bản</h5>
+                            <p>84 sản phẩm</p>
+                        </div>
+                    </div>
+                </a>
             </div>
+        </div>
+        <div class="section best-selling">
+            <h3 class="sec-title">
+                <b></b>
+                <p>BÁN CHẠY NHẤT</p>
+                <b></b>
+            </h3>
 
         </div>
-    </main>
+
+    </div>
+</main>
