--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     </li>
                     <li class="header-divider"></li>
                     <li class="header-cart">
+                            <div><span class="header-cartQuantity"></span></div>
                             <i class="fa-solid fa-cart-shopping"></i>
                     </li>
                 </ul>
@@ -115,6 +116,7 @@
 
 <script src="https://uhchat.net/code.php?f=f006aa"></script>
 <script src="script/main.js"></script>
-<script src="script/cart.js"></script>
+<script src="script/cart.js"></script> 
+<script src="script/addOn.js"></script>
 
 </html>
