--- a/script/asset/banner/1.html
+++ b/script/asset/banner/1.html
@@ -27,6 +27,7 @@
         background: #007784;
         padding: 12px;
         color: white;
+        border-radius: 9px  ;
     }
     
     .banner p {
