--- a/script/asset/banner/2.html
+++ b/script/asset/banner/2.html
@@ -46,6 +46,7 @@
         padding: 12px;
         color: white;
         font-weight: bold;
+        cursor: pointer;
     }
 
     .banner-buttons button:first-child {
