--- a/sub-pages/overlay/sign_up-main.html
+++ b/sub-pages/overlay/sign_up-main.html
@@ -1,6 +1,6 @@
 <div class="sign_up">
     <div onclick="hideOverlay()" class="back"><a><i class="fa-solid fa-square-caret-left"></i> Trang chủ</a></div>
-    <form class="form">
+    <form class="form" onsubmit="return formValidate(this)">
         <h3>ĐĂNG KÝ</h3>
         <div class="field">
             <p>Tên đăng nhập</p>
