--- a/sub-pages/products/lucky_coin-main.html
+++ b/sub-pages/products/lucky_coin-main.html
@@ -2,25 +2,28 @@
         <div class="wrapper">
             <div class="product">   
                 <div class="img">
-                    <img class="product-image" src="../asset/img/product/koi_lucky_fish/1.webp" alt="">
+                    <img class="product-image" src="../asset/img/product/lucky_coin/1.webp" alt="">
                     <div class="img-option">
                         <div class="img-option-item img-option-displaying">
-                            <img src="asset/img/product/koi_lucky_fish/1.webp" alt="">
+                            <img src="asset/img/product/lucky_coin/1.webp" alt="">
                         </div>
                         <div class="img-option-item">
-                            <img src="asset/img/product/koi_lucky_fish/2.png" alt="">
+                            <img src="asset/img/product/lucky_coin/2.webp" alt="">
                         </div>  
                         <div class="img-option-item">
-                            <img src="asset/img/product/koi_lucky_fish/3.jpg" alt="">
+                            <img src="asset/img/product/lucky_coin/3.webp" alt="">
+                        </div>
+                        <div class="img-option-item">
+                            <img src="asset/img/product/lucky_coin/4.webp" alt="">
                         </div>
                     </div>
 
                 </div>
                 <div class="info">
-                    <h1 class="product-name">Chuông thủy âm hình cá Mizu Bell từ Nhật Bản</h1>
+                    <h1 class="product-name">5 yên cho ví, bùa sức khỏe bùa hộ mệnh</h1>
                     <div class="divider"></div>
-                    <h2 class="product-price">16.96$</h2>
-                    <p>Chuông cá koi thủy âm, phát ra âm thanh của nước trong và sâu lắng. </p>
+                    <h2 class="product-price">5.96$</h2>
+                    <p>5yen for wallet healthy charm talisman amulet : Healthy</p>
                     <div class="cart-option">
                         <form action="">
                             <div class="quantity">
@@ -41,16 +44,12 @@
 
                     <div class="cat">
                         <span>
-                            Danh mục: <a href="#">May mắn và Hạnh phúc</a>, <a href="#">Chuông may mắn & Chuông
-                                gió</a>,
-                            <a href="#">Cá may mắn</a>, <a href="#">Tiền tài & Sự nghiệp</a>,
-                            <a href="#">Ý nghĩa của bùa</a>, <a href="#">Dây đeo và móc khóa</a>, <a href="#">Vật hộ
-                                mệnh</a>, <a href="#">Nhật Bản</a>
+                            Danh mục: <a href="#"> 5 YEN & Lucky Coins</a>, <a href="#">Healthy & Get well</a>,
+                            <a href="#">Money & Business</a>, <a href="#">Omamori Meaning</a>,
+                            <a href="#">Symbol of Talisman</a>, <a href="#">The Japan</a>
                         </span>
                         <span>
-                            Tags: <a href="#">Chuông cá koi</a>, <a href="#">Chuông nước</a>, <a href="#">Chuông
-                                thủy
-                                âm</a>
+                            Tags: <a href="#">5yen</a>, <a href="#">healthy amulet</a>, <a href="#">Healthy Charm</a>, <a href="#">healthy talisman</a>
                         </span>
                     </div>
 
@@ -63,36 +62,21 @@
             </div>
             <div>
                 <span>
-                    Chuông nước hình cá may mắn Nhật Bản, Chuông thủy âm hình cá chép <br>
-                    Chiếc chuông đáng yêu với âm thanh đặc biệt như nước, dây đeo quyến rũ độc đáo và tuyệt vời. Bùa
-                    hộ
-                    mệnh này, Cá chép có nghĩa là Giàu có và mang lại hạnh phúc cho bạn <br>
-                    Phù hợp cho móc điện thoại, móc ba lô hoặc chìa khóa <br>
-                    Được làm thủ công tại Nhật Bản <br> <br>
+                    5yen for wallet healthy charm talisman amulet : Healthy <br> <br>
                 </span>
                 <span>
 
                     <table>
                         <tr>
                             <th>Cỡ chuông</th>
-                            <td>rộng 2.8 cm, dài 3 cm, cao 2 cm.</td>
+                            <td>4 × 3 × 0.5 cm</td>
                         </tr>
                         <tr>
                             <th>Cân nặng</th>
-                            <td>10g</td>
-                        </tr>
-                        <tr>
-                            <th>Dây đeo</th>
-                            <td>đỏ, dài 9cm</td>
+                            <td>15g</td>
                         </tr>
                     </table>
                 </span>
-                <div style="margin-top: 20px;">
-                    <iframe title="Music bell lovely sound" width="100%" height="500"
-                        src="https://www.youtube.com/embed/q1y-pBJalvc?feature=oembed" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen=""></iframe>
-                </div>
             </div>
 
             <div id="fb-root"></div>
