--- a/sub-pages/overlay/login-main.html
+++ b/sub-pages/overlay/login-main.html
@@ -1,102 +1,3 @@
-<style>
-    .overlay {
-        background: rgb(142, 182, 196);
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100vw;
-        height: 100vh;
-        z-index: 10;
-    }
-
-    .overlay .form {
-        background-color: white;
-        width: 25%;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        border-radius: 21px;
-    }
-
-    .overlay form {
-        padding: 27px 36px;
-        display: flex;
-        flex-flow: column;
-        align-items: flex-start;
-    }
-
-    .overlay h3 {
-        margin-bottom: 24px;
-        font-size: 21px;
-        letter-spacing: 1px;
-    }
-
-    .overlay input {
-        padding: 8px 12px;
-        width: 100%;
-        border: 1px groove #ccc;
-        border-radius: 6px;
-        font-size: small;
-        height: 42px;
-        outline: none;
-    }
-
-    .overlay input[type="submit"] {
-        background-color: rgb(253, 129, 84);
-        border-radius: 14px;
-        color: white;
-        margin-top: 5px;
-        cursor: pointer;
-
-    }
-
-    .overlay .bottom {
-        margin-top: 25px;
-        width: 100%;
-    }
-
-    .overlay .field {
-        margin: 12px 0;
-        width: 100%;
-    }
-
-    .overlay .field>p {
-        color: #414141;
-        margin-bottom: 3px;
-        font-size: 16px;
-    }
-
-    .overlay .bottom {
-        text-align: right;
-    }
-
-    .overlay .bottom p,
-    .overlay .bottom a {
-        color: rgb(116, 116, 116);
-        font-size: 14px;
-    }
-
-    .overlay .back {
-        position: absolute;
-        background-color: white;
-        border-radius: 15px;
-        top: 5%;
-        left: 5%;
-        cursor: pointer;
-    }
-
-    .overlay .back a {
-        padding: 0 24px;
-        line-height: 42px;
-    }
-
-    .overlay .back i,
-    .overlay .back a {
-        color: black;
-        text-decoration: none;
-    }
-</style>
 <div class="login">
     <div onclick="hideOverlay()" class="back"><a><i class="fa-solid fa-square-caret-left"></i> Trang chủ</a></div>
     <div class="form">
@@ -114,6 +15,7 @@
                     khẩu?</a>
             </div>
             <div class="bottom">
+                <p>Bạn chưa có tài khoản? <a onclick="overlayLoader('sub-pages/overlay/sign_up-main.html')" style="cursor: pointer;">Đăng ký</a></p>
                 <input type="submit" value="XÁC NHẬN">
             </div>
         </form>
